@@ -13,6 +13,7 @@
 @import 'lib/reset.css';
 @import 'lib/typography.css';
 @import 'lib/grid.css';
+@import 'lib/forms.css';
 
 
 /* Compressed version:
